--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 os: osx
 language: cpp
 sudo: required
-script: "./configure && make -j8 && cd .. && tar -czf out.tgz opus && mv out.tgz opus/opus.macOS.tar.gz"
+script: "./configure && make -j8 && cd .. && tar -czf out.tgz opus && mv out.tgz opus/opus.macOS.tar.gz && cd opus"
 
 
 deploy:
