--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ deploy:
   provider: releases
   api_key: $GITHUB_OAUTH_TOKEN
   file: "opus.macOS.tar.gz"
+  skip_cleanup: true
   on:
     tags: true
